--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyShopPal">
-
+        <activity android:name=".activities.UserProfileActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activities.ForgotPasswordActivity"
             android:screenOrientation="portrait" />
-
         <activity android:name=".activities.BaseActivity" />
-
         <activity
             android:name=".activities.RegisterActivity"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.SplashActivity"
             android:screenOrientation="portrait"
@@ -30,11 +28,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.LoginActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activities.MainActivity"
             android:screenOrientation="portrait" />
