--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myshoppal">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -12,17 +11,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyShopPal">
-        <activity android:name=".activities.UserProfileActivity"
-            android:screenOrientation="portrait"></activity>
         <activity
-            android:name=".activities.ForgotPasswordActivity"
+            android:name="com.example.myshoppal.ui.activities.DashboardActivity"
+            android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:name="com.example.myshoppal.ui.activities.UserProfileActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activities.BaseActivity" />
         <activity
-            android:name=".activities.RegisterActivity"
+            android:name="com.example.myshoppal.ui.activities.ForgotPasswordActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name="com.example.myshoppal.ui.activities.BaseActivity" />
+        <activity
+            android:name="com.example.myshoppal.ui.activities.RegisterActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.SplashActivity"
+            android:name="com.example.myshoppal.ui.activities.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
@@ -32,10 +37,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.LoginActivity"
+            android:name="com.example.myshoppal.ui.activities.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.example.myshoppal.ui.activities.MainActivity"
             android:screenOrientation="portrait" />
     </application>
 
